[package]
name = "min_max_traits"
version = "0.1.0"
authors = ["Dmitrii Demenev <demenev.dmitriy1@gmail.com>"]
edition = "2021"
rust-version = "1.56.1" # https://github.com/foresterre/cargo-msrv
description = "Traits for MIN and MAX associated constants"
documentation = "https://docs.rs/min_max_traits"
readme = "README.md"
repository = "https://github.com/JohnScience/min_max_traits"
license = "MIT OR Apache-2.0"
# license-file | not needed
keywords = ["traits", "min", "max"]
categories = ["mathematics", "no-std"] # https://crates.io/category_slugs
# workspace | not needed
# build | not needed
# links | not needed
# exclude | not needed
autobins = false
autoexamples = false
autotests = false
autobenches = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
